parser/y.output

state 0
	$accept: .inputs $end 

	SINGLE_INPUT  shift 2
	FILE_INPUT  shift 3
	EVAL_INPUT  shift 4
	.  error

	inputs  goto 1

state 1
	$accept:  inputs.$end 

	$end  accept
	.  error


state 2
	inputs:  SINGLE_INPUT.single_input 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	ASSERT  shift 49
	BREAK  shift 52
	CLASS  shift 26
	CONTINUE  shift 53
	DEF  shift 25
	DEL  shift 38
	FOR  shift 22
	FROM  shift 58
	GLOBAL  shift 47
	IF  shift 19
	IMPORT  shift 57
	LAMBDA  shift 67
	NONLOCAL  shift 48
	NOT  shift 69
	PASS  shift 39
	RAISE  shift 55
	RETURN  shift 54
	TRY  shift 23
	WHILE  shift 21
	WITH  shift 24
	YIELD  shift 60
	MATCH  shift 20
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	'@'  shift 50
	.  error

	strings  goto 88
	single_input  goto 5
	simple_stmt  goto 6
	small_stmts  goto 8
	compound_stmt  goto 7
	small_stmt  goto 18
	expr_stmt  goto 28
	del_stmt  goto 29
	pass_stmt  goto 30
	flow_stmt  goto 31
	import_stmt  goto 32
	global_stmt  goto 33
	nonlocal_stmt  goto 34
	assert_stmt  goto 35
	break_stmt  goto 40
	continue_stmt  goto 41
	return_stmt  goto 42
	raise_stmt  goto 43
	yield_stmt  goto 44
	import_name  goto 45
	import_from  goto 46
	while_stmt  goto 11
	if_stmt  goto 9
	for_stmt  goto 12
	try_stmt  goto 13
	with_stmt  goto 14
	funcdef  goto 15
	classdef  goto 16
	decorated  goto 17
	match_stmt  goto 10
	expr  goto 71
	star_expr  goto 62
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test_or_star_expr  goto 59
	test  goto 61
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	testlist_star_expr  goto 37
	yield_expr  goto 56
	decorator  goto 36
	test_or_star_exprs  goto 51
	decorators  goto 27

state 3
	inputs:  FILE_INPUT.file_input 
	nl_or_stmt: .    (7)

	.  reduce 7 (src line 297)

	file_input  goto 94
	nl_or_stmt  goto 95

state 4
	inputs:  EVAL_INPUT.eval_input 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	eval_input  goto 96
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 99
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	testlist  goto 97
	tests  goto 98

state 5
	inputs:  SINGLE_INPUT single_input.    (1)

	.  reduce 1 (src line 254)


state 6
	single_input:  simple_stmt.    (4)

	.  reduce 4 (src line 271)


state 7
	single_input:  compound_stmt.NEWLINE 

	NEWLINE  shift 100
	.  error


state 8
	small_stmts:  small_stmts.';' small_stmt 
	simple_stmt:  small_stmts.optional_semicolon NEWLINE 
	optional_semicolon: .    (64)

	';'  shift 101
	.  reduce 64 (src line 610)

	optional_semicolon  goto 102

state 9
	compound_stmt:  if_stmt.    (152)

	.  reduce 152 (src line 1070)


state 10
	compound_stmt:  match_stmt.    (153)

	.  reduce 153 (src line 1075)


state 11
	compound_stmt:  while_stmt.    (154)

	.  reduce 154 (src line 1079)


state 12
	compound_stmt:  for_stmt.    (155)

	.  reduce 155 (src line 1083)


state 13
	compound_stmt:  try_stmt.    (156)

	.  reduce 156 (src line 1087)


state 14
	compound_stmt:  with_stmt.    (157)

	.  reduce 157 (src line 1091)


state 15
	compound_stmt:  funcdef.    (158)

	.  reduce 158 (src line 1095)


state 16
	compound_stmt:  classdef.    (159)

	.  reduce 159 (src line 1099)


state 17
	compound_stmt:  decorated.    (160)

	.  reduce 160 (src line 1103)


state 18
	small_stmts:  small_stmt.    (66)

	.  reduce 66 (src line 612)


state 19
	if_stmt:  IF.test ':' suite elifs optional_else 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 103
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70

state 20
	match_stmt:  MATCH.expr ':' NEWLINE INDENT case_suite DEDENT 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 104
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82

state 21
	while_stmt:  WHILE.test ':' suite optional_else 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 105
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70

state 22
	for_stmt:  FOR.exprlist IN testlist ':' suite optional_else 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr_or_star_expr  goto 108
	expr  goto 109
	star_expr  goto 110
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	exprlist  goto 106
	expr_or_star_exprs  goto 107

state 23
	try_stmt:  TRY.':' suite except_clauses 
	try_stmt:  TRY.':' suite except_clauses ELSE ':' suite 
	try_stmt:  TRY.':' suite except_clauses FINALLY ':' suite 
	try_stmt:  TRY.':' suite except_clauses ELSE ':' suite FINALLY ':' suite 

	':'  shift 111
	.  error


state 24
	with_stmt:  WITH.with_items ':' suite 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 114
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	with_item  goto 113
	with_items  goto 112

state 25
	funcdef:  DEF.NAME parameters optional_return_type ':' suite 

	NAME  shift 115
	.  error


state 26
	classdef:  CLASS.NAME optional_arglist_call ':' suite 

	NAME  shift 116
	.  error


state 27
	decorators:  decorators.decorator 
	decorated:  decorators.classdef_or_funcdef 

	CLASS  shift 26
	DEF  shift 25
	'@'  shift 50
	.  error

	funcdef  goto 120
	classdef  goto 119
	classdef_or_funcdef  goto 118
	decorator  goto 117

state 28
	small_stmt:  expr_stmt.    (69)

	.  reduce 69 (src line 629)


state 29
	small_stmt:  del_stmt.    (70)

	.  reduce 70 (src line 634)


state 30
	small_stmt:  pass_stmt.    (71)

	.  reduce 71 (src line 638)


state 31
	small_stmt:  flow_stmt.    (72)

	.  reduce 72 (src line 642)


state 32
	small_stmt:  import_stmt.    (73)

	.  reduce 73 (src line 646)


state 33
	small_stmt:  global_stmt.    (74)

	.  reduce 74 (src line 650)


state 34
	small_stmt:  nonlocal_stmt.    (75)

	.  reduce 75 (src line 654)


state 35
	small_stmt:  assert_stmt.    (76)

	.  reduce 76 (src line 658)


state 36
	decorators:  decorator.    (18)

	.  reduce 18 (src line 351)


state 37
	expr_stmt:  testlist_star_expr.augassign yield_expr_or_testlist 
	expr_stmt:  testlist_star_expr.equals_yield_expr_or_testlist_star_expr 
	expr_stmt:  testlist_star_expr.    (79)

	PERCEQ  shift 127
	ANDEQ  shift 128
	STARSTAREQ  shift 133
	STAREQ  shift 125
	PLUSEQ  shift 123
	MINUSEQ  shift 124
	DIVDIVEQ  shift 134
	DIVEQ  shift 126
	LTLTEQ  shift 131
	GTGTEQ  shift 132
	HATEQ  shift 130
	PIPEEQ  shift 129
	'='  shift 135
	.  reduce 79 (src line 700)

	augassign  goto 121
	equals_yield_expr_or_testlist_star_expr  goto 122

state 38
	del_stmt:  DEL.exprlist 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr_or_star_expr  goto 108
	expr  goto 109
	star_expr  goto 110
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	exprlist  goto 136
	expr_or_star_exprs  goto 107

state 39
	pass_stmt:  PASS.    (106)

	.  reduce 106 (src line 830)


state 40
	flow_stmt:  break_stmt.    (107)

	.  reduce 107 (src line 836)


state 41
	flow_stmt:  continue_stmt.    (108)

	.  reduce 108 (src line 841)


state 42
	flow_stmt:  return_stmt.    (109)

	.  reduce 109 (src line 845)


state 43
	flow_stmt:  raise_stmt.    (110)

	.  reduce 110 (src line 849)


state 44
	flow_stmt:  yield_stmt.    (111)

	.  reduce 111 (src line 853)


state 45
	import_stmt:  import_name.    (120)

	.  reduce 120 (src line 900)


state 46
	import_stmt:  import_from.    (121)

	.  reduce 121 (src line 905)


state 47
	global_stmt:  GLOBAL.names 

	NAME  shift 138
	.  error

	names  goto 137

state 48
	nonlocal_stmt:  NONLOCAL.names 

	NAME  shift 138
	.  error

	names  goto 139

state 49
	assert_stmt:  ASSERT.test 
	assert_stmt:  ASSERT.test ',' test 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 140
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70

state 50
	decorator:  '@'.dotted_name optional_arglist_call NEWLINE 

	NAME  shift 142
	.  error

	dotted_name  goto 141

state 51
	test_or_star_exprs:  test_or_star_exprs.',' test_or_star_expr 
	testlist_star_expr:  test_or_star_exprs.optional_comma 
	optional_comma: .    (90)

	','  shift 143
	.  reduce 90 (src line 757)

	optional_comma  goto 144

state 52
	break_stmt:  BREAK.    (112)

	.  reduce 112 (src line 858)


state 53
	continue_stmt:  CONTINUE.    (113)

	.  reduce 113 (src line 864)


state 54
	return_stmt:  RETURN.    (114)
	return_stmt:  RETURN.testlist 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  reduce 114 (src line 870)

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 99
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	testlist  goto 145
	tests  goto 98

state 55
	raise_stmt:  RAISE.    (117)
	raise_stmt:  RAISE.test 
	raise_stmt:  RAISE.test FROM test 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  reduce 117 (src line 886)

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 146
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70

state 56
	yield_stmt:  yield_expr.    (116)

	.  reduce 116 (src line 880)


state 57
	import_name:  IMPORT.dotted_as_names 

	NAME  shift 142
	.  error

	dotted_name  goto 149
	dotted_as_name  goto 148
	dotted_as_names  goto 147

state 58
	import_from:  FROM.from_arg IMPORT import_from_arg 

	NAME  shift 142
	ELIPSIS  shift 155
	'.'  shift 154
	.  error

	dot  goto 153
	dots  goto 152
	dotted_name  goto 151
	from_arg  goto 150

state 59
	test_or_star_exprs:  test_or_star_expr.    (86)

	.  reduce 86 (src line 736)


state 60
	yield_expr:  YIELD.    (314)
	yield_expr:  YIELD.FROM test 
	yield_expr:  YIELD.testlist 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	FROM  shift 156
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  reduce 314 (src line 2021)

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 99
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	testlist  goto 157
	tests  goto 98

state 61
	test_or_star_expr:  test.    (88)

	.  reduce 88 (src line 747)


state 62
	test_or_star_expr:  star_expr.    (89)

	.  reduce 89 (src line 752)


state 63
	test:  or_test.    (191)
	test:  or_test.IF or_test ELSE test 
	or_test:  or_test.OR and_test 

	IF  shift 158
	OR  shift 159
	.  reduce 191 (src line 1301)


state 64
	test:  lambdef.    (193)

	.  reduce 193 (src line 1310)


state 65
	star_expr:  '*'.expr 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 160
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82

state 66
	or_test:  and_test.    (200)
	and_test:  and_test.AND not_test 

	AND  shift 161
	.  reduce 200 (src line 1347)


state 67
	lambdef:  LAMBDA.':' test 
	lambdef:  LAMBDA.varargslist ':' test 

	NAME  shift 169
	STARSTAR  shift 166
	':'  shift 162
	'*'  shift 165
	.  error

	vfpdeftest  goto 167
	vfpdef  goto 168
	vfpdeftests1  goto 164
	varargslist  goto 163

state 68
	and_test:  not_test.    (202)

	.  reduce 202 (src line 1364)


state 69
	not_test:  NOT.not_test 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	not_test  goto 170
	comparison  goto 70

state 70
	not_test:  comparison.    (205)
	comparison:  comparison.comp_op expr 

	PLINGEQ  shift 178
	LTEQ  shift 176
	LTGT  shift 177
	EQEQ  shift 174
	GTEQ  shift 175
	IN  shift 179
	IS  shift 181
	NOT  shift 180
	'<'  shift 172
	'>'  shift 173
	.  reduce 205 (src line 1386)

	comp_op  goto 171

state 71
	comparison:  expr.    (206)
	expr:  expr.'|' xor_expr 

	'|'  shift 182
	.  reduce 206 (src line 1391)


state 72
	expr:  xor_expr.    (220)
	xor_expr:  xor_expr.'^' and_expr 

	'^'  shift 183
	.  reduce 220 (src line 1463)


state 73
	xor_expr:  and_expr.    (222)
	and_expr:  and_expr.'&' shift_expr 

	'&'  shift 184
	.  reduce 222 (src line 1473)


state 74
	and_expr:  shift_expr.    (224)
	shift_expr:  shift_expr.LTLT arith_expr 
	shift_expr:  shift_expr.GTGT arith_expr 

	LTLT  shift 185
	GTGT  shift 186
	.  reduce 224 (src line 1483)


state 75
	shift_expr:  arith_expr.    (226)
	arith_expr:  arith_expr.'+' term 
	arith_expr:  arith_expr.'-' term 

	'+'  shift 187
	'-'  shift 188
	.  reduce 226 (src line 1493)


state 76
	arith_expr:  term.    (229)
	term:  term.'*' factor 
	term:  term.'/' factor 
	term:  term.'%' factor 
	term:  term.DIVDIV factor 

	DIVDIV  shift 192
	'*'  shift 189
	'/'  shift 190
	'%'  shift 191
	.  reduce 229 (src line 1507)


state 77
	term:  factor.    (232)

	.  reduce 232 (src line 1521)


state 78
	factor:  '+'.factor 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	factor  goto 193
	power  goto 81
	atom  goto 82

state 79
	factor:  '-'.factor 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	factor  goto 194
	power  goto 81
	atom  goto 82

state 80
	factor:  '~'.factor 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	factor  goto 195
	power  goto 81
	atom  goto 82

state 81
	factor:  power.    (240)

	.  reduce 240 (src line 1556)


state 82
	power:  atom.trailers 
	power:  atom.trailers STARSTAR factor 
	trailers: .    (243)

	.  reduce 243 (src line 1572)

	trailers  goto 196

state 83
	atom:  '('.')' 
	atom:  '('.yield_expr ')' 
	atom:  '('.test_or_star_expr comp_for ')' 
	atom:  '('.test_or_star_exprs optional_comma ')' 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	YIELD  shift 60
	'('  shift 83
	')'  shift 197
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	star_expr  goto 62
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test_or_star_expr  goto 199
	test  goto 61
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	yield_expr  goto 198
	test_or_star_exprs  goto 200

state 84
	atom:  '['.']' 
	atom:  '['.test_or_star_expr comp_for ']' 
	atom:  '['.test_or_star_exprs optional_comma ']' 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	']'  shift 201
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	star_expr  goto 62
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test_or_star_expr  goto 202
	test  goto 61
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	test_or_star_exprs  goto 203

state 85
	atom:  '{'.'}' 
	atom:  '{'.dictorsetmaker '}' 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	LAMBDA  shift 67
	NOT  shift 69
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'{'  shift 85
	'}'  shift 204
	'~'  shift 80
	.  error

	strings  goto 88
	expr  goto 71
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test  goto 207
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	dictorsetmaker  goto 205
	testlistraw  goto 208
	tests  goto 209
	test_colon_tests  goto 206

state 86
	atom:  NAME.    (256)

	.  reduce 256 (src line 1643)


state 87
	atom:  NUMBER.    (257)

	.  reduce 257 (src line 1647)


state 88
	strings:  strings.STRING 
	atom:  strings.    (258)

	STRING  shift 210
	.  reduce 258 (src line 1651)


state 89
	atom:  ELIPSIS.    (259)

	.  reduce 259 (src line 1662)


state 90
	atom:  NONE.    (260)

	.  reduce 260 (src line 1666)


state 91
	atom:  TRUE.    (261)

	.  reduce 261 (src line 1670)


state 92
	atom:  FALSE.    (262)

	.  reduce 262 (src line 1674)


state 93
	strings:  STRING.    (245)

	.  reduce 245 (src line 1581)


state 94
	inputs:  FILE_INPUT file_input.    (2)

	.  reduce 2 (src line 260)


state 95
	file_input:  nl_or_stmt.ENDMARKER 
	nl_or_stmt:  nl_or_stmt.NEWLINE 
	nl_or_stmt:  nl_or_stmt.stmt 

	NEWLINE  shift 212
	ENDMARKER  shift 211
	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	ASSERT  shift 49
	BREAK  shift 52
	CLASS  shift 26
	CONTINUE  shift 53
	DEF  shift 25
	DEL  shift 38
	FOR  shift 22
	FROM  shift 58
	GLOBAL  shift 47
	IF  shift 19
	IMPORT  shift 57
	LAMBDA  shift 67
	NONLOCAL  shift 48
	NOT  shift 69
	PASS  shift 39
	RAISE  shift 55
	RETURN  shift 54
	TRY  shift 23
	WHILE  shift 21
	WITH  shift 24
	YIELD  shift 60
	MATCH  shift 20
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	'@'  shift 50
	.  error

	strings  goto 88
	simple_stmt  goto 214
	stmt  goto 213
	small_stmts  goto 8
	compound_stmt  goto 215
	small_stmt  goto 18
	expr_stmt  goto 28
	del_stmt  goto 29
	pass_stmt  goto 30
	flow_stmt  goto 31
	import_stmt  goto 32
	global_stmt  goto 33
	nonlocal_stmt  goto 34
	assert_stmt  goto 35
	break_stmt  goto 40
	continue_stmt  goto 41
	return_stmt  goto 42
	raise_stmt  goto 43
	yield_stmt  goto 44
	import_name  goto 45
	import_from  goto 46
	while_stmt  goto 11
	if_stmt  goto 9
	for_stmt  goto 12
	try_stmt  goto 13
	with_stmt  goto 14
	funcdef  goto 15
	classdef  goto 16
	decorated  goto 17
	match_stmt  goto 10
	expr  goto 71
	star_expr  goto 62
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test_or_star_expr  goto 59
	test  goto 61
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	testlist_star_expr  goto 37
	yield_expr  goto 56
	decorator  goto 36
	test_or_star_exprs  goto 51
	decorators  goto 27

state 96
	inputs:  EVAL_INPUT eval_input.    (3)

	.  reduce 3 (src line 265)


state 97
	eval_input:  testlist.nls ENDMARKER 
	nls: .    (11)

	.  reduce 11 (src line 317)

	nls  goto 216

state 98
	tests:  tests.',' test 
	testlist:  tests.optional_comma 
	optional_comma: .    (90)

	','  shift 217
	.  reduce 90 (src line 757)

	optional_comma  goto 218

state 99
	tests:  test.    (148)

	.  reduce 148 (src line 1049)


state 100
	single_input:  compound_stmt NEWLINE.    (5)

	.  reduce 5 (src line 283)


state 101
	optional_semicolon:  ';'.    (65)
	small_stmts:  small_stmts ';'.small_stmt 

	NAME  shift 86
	STRING  shift 93
	NUMBER  shift 87
	ELIPSIS  shift 89
	FALSE  shift 92
	NONE  shift 90
	TRUE  shift 91
	ASSERT  shift 49
	BREAK  shift 52
	CONTINUE  shift 53
	DEL  shift 38
	FROM  shift 58
	GLOBAL  shift 47
	IMPORT  shift 57
	LAMBDA  shift 67
	NONLOCAL  shift 48
	NOT  shift 69
	PASS  shift 39
	RAISE  shift 55
	RETURN  shift 54
	YIELD  shift 60
	'('  shift 83
	'['  shift 84
	'+'  shift 78
	'-'  shift 79
	'*'  shift 65
	'{'  shift 85
	'~'  shift 80
	.  reduce 65 (src line 610)

	strings  goto 88
	small_stmt  goto 219
	expr_stmt  goto 28
	del_stmt  goto 29
	pass_stmt  goto 30
	flow_stmt  goto 31
	import_stmt  goto 32
	global_stmt  goto 33
	nonlocal_stmt  goto 34
	assert_stmt  goto 35
	break_stmt  goto 40
	continue_stmt  goto 41
	return_stmt  goto 42
	raise_stmt  goto 43
	yield_stmt  goto 44
	import_name  goto 45
	import_from  goto 46
	expr  goto 71
	star_expr  goto 62
	xor_expr  goto 72
	and_expr  goto 73
	shift_expr  goto 74
	arith_expr  goto 75
	term  goto 76
	factor  goto 77
	power  goto 81
	atom  goto 82
	test_or_star_expr  goto 59
	test  goto 61
	not_test  goto 68
	lambdef  goto 64
	or_test  goto 63
	and_test  goto 66
	comparison  goto 70
	testlist_star_expr  goto 37
	yield_expr  goto 56
	test_or_star_exprs  goto 51

state 102
	simple_stmt:  small_stmts optional_semicolon.NEWLINE 

	NEWLINE  shift 220
	.  error


state 103
	if_stmt:  IF test.':' suite elifs optional_else 

	':'  shift 221
	.  error


state 104
	match_stmt:  MATCH expr.':' NEWLINE INDENT case_suite DEDENT 
	expr:  expr.'|' xor_expr 

	':'  shift 222
	'|'  shift 182
	.  error


state 105
	while_stmt:  WHILE test.':' suite optional_else 

	':'  shift 223
	.  error


state 106
	for_stmt:  FOR exprlist.IN testlist ':' suite optional_else 

	IN  shift 224
	.  error


state 107
	expr_or_star_exprs:  expr_or_star_exprs.',' expr_or_star_expr 
	exprlist:  expr_or_star_exprs.optional_comma 
	optional_comma: .    (90)

	','  shift 225
	.  reduce 90 (src line 757)

	optional_comma  goto 226

state 108
	expr_or_star_exprs:  expr_or_star_expr.    (283)

	.  reduce 283 (src line 1797)


state 109
	expr:  expr.'|' xor_expr 
	expr_or_star_expr:  expr.    (281)

	'|'  shift 182
	.  reduce 281 (src line 1787)


state 110
	expr_or_star_expr:  star_expr.    (282)

	.  reduce 282 (src line 1792)

